modified:   backend/module/settings/default_config.yaml

--- a/backend/module/settings/default_config.yaml
+++ b/backend/module/settings/default_config.yaml
@@ -11,8 +11,8 @@ openai:
   api_key: ""
 
 qbittorrent:
-  host: ""
-  user: ""
+  host: "127.0.0.1"
+  user: "admin"
   password: ""
   path_prefix: "/"
 
