--- a/webui/package.json
+++ b/webui/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "axios":"^1.13.2"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
