modified:   backend/module/api/__pycache__/editConfig.cpython-314.pyc 	modified:   backend/module/api/editConfig.py 	modified:   backend/module/settings/default_config.yaml 	new file:   webui/src/assets/HClO.png 	new file:   webui/src/components/AddRssForm.vue 	new file:   webui/src/components/ConfigCard.vue 	new file:   webui/src/components/FormInput.vue 	new file:   webui/src/components/RssList.vue 	modified:   webui/src/components/Sidebar.vue 	new file:   webui/src/components/StatusBar.vue 	modified:   webui/src/views/RSS.vue 	modified:   webui/src/views/Settings.vue

--- a/backend/module/settings/default_config.yaml
+++ b/backend/module/settings/default_config.yaml
@@ -14,9 +14,9 @@ qbittorrent:
   host: "127.0.0.1"
   user: "admin"
   password: ""
-  path_prefix: "/"
+  path_prefix: "/" #下载路径前缀，如/bangumi/
 
 filter:
-  hasCHS: false
-  hasCHT: false
-  subtype: ["HRD", "SFT", "EXT", "UKN"]
+  hasCHS: false #是否包含中文简体,使用是否选择框
+  hasCHT: false #是否包含中文繁体,使用是否选择框
+  subtype: ["HRD", "SFT", "EXT", "UKN"] #四个中任意选择一个或多个
