--- a/backend/module/settings/default_config.yaml
+++ b/backend/module/settings/default_config.yaml
@@ -20,3 +20,6 @@ filter:
   hasCHS: false #是否包含中文简体,使用是否选择框
   hasCHT: false #是否包含中文繁体,使用是否选择框
   subtype: ["HRD", "SFT", "EXT", "UKN"] #四个中任意选择一个或多个
+
+parser:
+  interval: 10 #解析间隔，单位分钟
